# itergp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  formatting-requirements.txt  plotting.mplstyle  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: CI-build.yml  linting.yml
docs/source/: api.rst  conf.py  sitemap.rst  tutorials.rst
docs/source/_static/: custom.css
docs/source/_templates/: docs-navbar.html  footer.html  index.html  layout.html
docs/source/api/: datasets.rst  datasets.uci.rst  itergp.rst  linops.rst  methods.belief_updates.rst  methods.beliefs.rst  methods.information_ops.rst  methods.policies.rst  methods.preconditioners.rst  methods.rst  methods.stopping_criteria.rst
docs/source/assets/img/favicons/: browserconfig.xml
docs/source/tutorials/: algorithm_illustration.ipynb  quickstart.ipynb
src/itergp/: __init__.py  _gaussian_process.py
src/itergp/datasets/: __init__.py  _dataset.py  _synthetic_dataset.py
src/itergp/datasets/uci/: __init__.py  _bike_sharing.py  _kegg_undir.py  _parkinsons.py  _protein.py  _road_network.py  _uci_dataset.py
src/itergp/kernels/: __init__.py
src/itergp/linops/: __init__.py  _kernel_matrix.py  _low_rank.py
src/itergp/methods/: __init__.py  _auto_precond_conjugate_gradient.py  _cholesky.py  _conjugate_gradient.py  _mixed_strategy.py  _projected_bayes_regressor.py  _pseudo_input.py
src/itergp/methods/belief_updates/: __init__.py  projected_residual.py
src/itergp/methods/information_ops/: __init__.py
src/itergp/methods/policies/: __init__.py  _adverserial_policy.py  _auto_preconditioned_gradient.py  _conjugate_gradient.py  _eigenvector.py  _gradient.py  _mixed.py  _pseudo_input.py  _unit_vector.py
src/itergp/methods/preconditioners/: __init__.py  _diagonal_plus_low_rank.py
src/itergp/methods/stopping_criteria/: __init__.py  _maxiter.py
tests/: conftest.py
tests/test_linops/: __init__.py  conftest.py  test_kernel_matrix.py
tests/test_linops/cases/: kernel_matrix_cases.py
