[metadata]
name = itergp
description = Posterior and Computational Uncertainty in Gaussian Processes.
url = https://github.com/JonathanWenger/itergp
author = Jonathan Wenger
author_email =
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gaussian-processes, machine-learning, probabilistic-numerics
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
  setuptools_scm
package_dir =
    =src
# Dependencies of the project (semicolon/line-separated):
install_requires =
	probnum @ git+https://github.com/JonathanWenger/probnum.git@ad-prototype-itergp
    pandas>=1.4.0,<1.5.0
    pykeops>=2.1,<2.2; platform_system!="Windows"
    requests
    matplotlib
# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.8,<3.11

[options.packages.find]
where = src
exclude =
    tests
    experiments
    results

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install itergp[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)

# Experiments
exp =
    jupyter
    tueplots>=0.0.4,<0.0.5
    wandb>=0.12.14,<0.13.0
    fire>=0.4.0,<0.5.0
    gpytorch>=1.6.0,<1.7.0

# Development
dev =
    tox

# Full installation
full =
    %(exp)s
    %(dev)s

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = pkgname.module:function
console_scripts =
    run_experiments = itergp.cli:main

[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
warning-is-error = 1
